# AnasenCal

./: .gitignore  CMakeLists.txt  Makefile  README.md  input.txt
etc/: AnasenChannelMap_fixedOrientation.txt
include/: ChannelMap.h  DataCalibrator.h  DataOrganizer.h  DataStructs.h  DeadChannelMap.h  EnergyCalibrator.h  GainMatcher.h  LinkDef_AnasenEvent.h  MapChecker.h  ParameterMap.h  ZeroCalMap.h  ZeroCalibrator.h
macros/: chainFiles.C  drawGeometry.C  makeMap.C  testPlot.C
src/: CMakeLists.txt  ChannelMap.cpp  ChannelMap.h  DataCalibrator.cpp  DataCalibrator.h  DataOrganizer.cpp  DeadChannelMap.cpp  EnergyCalibrator.cpp  EnergyCalibrator.h  GainMatcher.cpp  GainMatcher.h  MapChecker.cpp  MapChecker.h  ParameterMap.cpp  ParameterMap.h  RandomGenerator.cpp  RandomGenerator.h  ZeroCalMap.cpp  ZeroCalibrator.cpp  main.cpp
src/CalDict/: CMakeLists.txt  DataStructs.cpp  DataStructs.h
src/Geometry/: AnasenArray.cpp  AnasenArray.h  BarcelonaDetector.cpp  BarcelonaDetector.h  QQQDetector.cpp  QQQDetector.h  SX3Detector.cpp  SX3Detector.h
